# instruct-easy

./: .gitignore  README.md  pyproject.toml
src/instruct_easy/: __init__.py  prompt.py  test_prompt.py  utils.py
src/instruct_easy/tools/: __init__.py  file_writer.py
