[project]
name = "instruct-easy"
version = "0.1.0"
description = "Utilities to reduce the boilerplate code of Python projects using the [Instructor](https://python.useinstructor.com/) library."
authors = [
    { name = "outcastgeek", email = "outcastgeek+gitkraken@gmail.com" }
]
dependencies = [
    "pydantic>=2.8.2",
    "instructor>=1.3.4",
    "anthropic>=0.30.1",
    "groq>=0.9.0",
    "openai>=1.35.10",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/instruct_easy"]
